# Game

./: Cargo.toml  README.md  dev-setup.md  gdd.md  rustfmt.toml
crates/common/: readme.md
crates/engine/: Cargo.toml  readme.md
crates/engine/src/: client.rs  lib.rs
crates/game/: Cargo.toml  readme.md
crates/game/src/: main.rs
crates/plugins/: Cargo.toml  readme.md
crates/plugins/src/: camera.rs  lib.rs
game/: TerrainSnow02.glb.import  fix.tscn  icon.svg.import  project.godot  wor5649.tmp  world.tscn
game/assets/: Factory.glb.import  Factory_PUSHILIN_factory.png.import  Soldier.glb.import  unit.glb.import
game/assets/Animations/: Animations.res
game/assets/Build2/: Building2__defaultMat.png.import  Building2_bricks.png.import  Building2_dark.png.import  Building2_stone.png.import  Building2_stoneDark.png.import
game/assets/Build3/: Building3_0.png.import  Building3_1.png.import  Building3_2.png.import
game/assets/Materials/: FloorMat.tres
game/assets/Rock/: Rocks_stone.png.import
game/assets/Tree/: Tree_0.png.import  Tree_1.png.import
game/assets/audio/: castle.mp3.import
game/assets/maps/: Nature.glb.import  TerrainSnow02.glb.import  TerrainSnow02_C.glb.import
game/assets/textures/forest/: Grass001_2K-PNG_Color.png.import  Grass001_2K-PNG_NormalGL.png.import  (+4 more)
game/scripts/: camera_base.gd
game/src/: main.gd  main.tscn
game/src/scenes/: gam351C.tmp  world.tscn
game/src/scripts/: RTSController.gd  UnitSelector.gd  stone_unit.gd
game/src/world/: game.tscn
scripts/: cargo.ps1  create-crate.ps1  project-installer.ps1  run-game.ps1
(+25 files in other folders)
